--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
 setw -g mode-keys emacs
 bind-key -T copy-mode y send-keys -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
 bind-key C-y run "xclip -o -sel clip | tmux load-buffer - ; tmux paste-buffer"
+set-option -g default-shell /bin/zsh
