added i3status-rust, font updates

--- a/10-Custom.conf
+++ b/10-Custom.conf
@@ -13,6 +13,14 @@
     </edit>
 </match> -->
   <!-- Set preferred serif, sans serif, and monospace fonts. -->
+<match>
+    <test name="prgname">
+        <string>chrome</string>
+    </test>
+    <edit name="family" mode="prepend" binding="weak">
+        <string>Noto Color Emoji</string>
+    </edit>
+</match>
 <alias>
     <family>serif</family>
     <prefer><family>Tinos</family></prefer>
